service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-fastapi-service
spec:
  type: NodePort
  selector:
    app: sample-fastapi
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
