ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sample-fastapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-fastapi-service
            port:
              number: 8000
